<resources>
    <string name="app_name">PokeAppPro</string>
    <string name="ContentImageLogin">Login Image</string>
    <string name="TrainerHint">Trainer</string>
    <string name="TextGender">Gender</string>
    <string name="radiobuttonMale">Male</string>
    <string name="radiobuttonFemale">Female</string>
    <string name="buttonEnter">Enter</string>
    <string name="textview">TextView</string>
    <string name="pokemonnamedetail">PokemonName</string>
    <string name="ImageDetail">TODO</string>
    <string name="textviewDetailDetail">TextView</string>
    <string name="favoritesResource">Favorites</string>
    <string name="RecentResource">Recents</string>
    <string name="favorite_star_image">Favorite Star Image</string>
    <string name="string_favorite_star_image" />
    <string name="pokemonimage">PokemonImage</string>
    <string name="selectAllResource">Select All</string>
    <string name="pokemon_name">Select All</string>
    <string name="preference_file_key">com.example.pokeapppro.PREFERENCE_FILE_KEY</string>

</resources>
